--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest",
     "format": "prettier --write \"./src/**/*.{ts,tsx}\""
   },
   "dependencies": {
@@ -19,11 +20,15 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@testing-library/react": "^12.1.2",
+    "@types/jest": "^27.0.3",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
+    "jest": "^27.4.5",
     "prettier": "2.5.1",
+    "ts-jest": "^27.1.2",
     "typescript": "4.5.4"
   }
 }
