--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "format": "prettier --write \"./src/**/*.{ts,tsx}\""
   },
   "dependencies": {
+    "@apollo/client": "^3.5.6",
     "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "framer-motion": "^4",
+    "graphql": "^16.2.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
