--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@chakra-ui/react": "1.7.3",
     "@emotion/react": "11.7.1",
     "@emotion/styled": "11.6.0",
+    "firebase": "^9.6.3",
     "framer-motion": "4.1.17",
     "graphql": "16.2.0",
     "next": "12.0.7",
