--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dore",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next -p 8080",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -16,23 +16,27 @@
     "@emotion/react": "11.7.1",
     "@emotion/styled": "11.6.0",
     "firebase": "^9.6.3",
+    "firebaseui-ja": "^1.0.0",
     "framer-motion": "4.1.17",
     "graphql": "16.2.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-firebaseui": "^6.0.0"
+    "react-firebaseui": "^6.0.0",
+    "react-firebaseui-localized": "^1.2.1"
   },
   "devDependencies": {
     "@testing-library/react": "12.1.2",
     "@types/jest": "^27.0.3",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
+    "css-loader": "^6.5.1",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "jest": "27.4.5",
     "prettier": "2.5.1",
     "ts-jest": "27.1.2",
-    "typescript": "4.5.4"
+    "typescript": "4.5.4",
+    "webpack-merge": "^5.8.0"
   }
 }
