--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@chakra-ui/react": "1.7.3",
     "@emotion/react": "11.7.1",
     "@emotion/styled": "11.6.0",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-http": "^1.5.17",
     "firebase": "^9.6.3",
     "firebaseui-ja": "^1.0.0",
     "framer-motion": "4.1.17",
     "graphql": "16.2.0",
     "next": "12.0.7",
     "react": "17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
     "react-firebaseui": "^6.0.0",
     "react-firebaseui-localized": "^1.2.1"
