--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "4.1.17",
     "graphql": "16.2.0",
     "next": "12.0.7",
+    "next-pwa": "^5.4.4",
     "react": "17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
