--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "baseUrl": "./",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/hooks/auth/service_worker.js", "service_worker.js"],
   "exclude": ["node_modules"]
 }
