--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 NEXT_PUBLIC_BACKEND_URL=http://localhost:3000
 
-FIREBASE_KEY=AIzaSyCOYRaJHRYSPp-2OgDp1KnaSFmjm5fO-UE
-FIREBASE_DOMAIN=dore-dev-55117.firebaseapp.com
-FIREBASE_PROJECT_ID=dore-dev-55117
-FIREBASE_STORAGE_BUCKET=dore-dev-55117.appspot.com
-FIREBASE_SENDER_ID=745895554960
-FIREBASE_APP_ID=1:745895554960:web:4f1b6860e000459fd58d15
-FIREBASE_MEASUREMENT_ID=G-RQPTPBB4ZV
+NEXT_PUBLIC_FIREBASE_KEY=AIzaSyCOYRaJHRYSPp-2OgDp1KnaSFmjm5fO-UE
+NEXT_PUBLIC_FIREBASE_DOMAIN=dore-dev-55117.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=dore-dev-55117
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=dore-dev-55117.appspot.com
+NEXT_PUBLIC_FIREBASE_SENDER_ID=745895554960
+NEXT_PUBLIC_FIREBASE_APP_ID=1:745895554960:web:4f1b6860e000459fd58d15
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-RQPTPBB4ZV
