--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "graphql": "16.2.0",
     "next": "12.0.7",
     "next-pwa": "^5.4.4",
+    "nookies": "^2.5.2",
     "react": "17.0.2",
-    "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
     "react-firebaseui": "^6.0.0",
     "react-firebaseui-localized": "^1.2.1"
