--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "format": "prettier --write \"./src/**/*.{ts,tsx}\""
+    "format": "prettier --write \"./src/**/*.{ts,tsx}\"",
+    "generate": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@apollo/client": "^3.5.6",
@@ -20,7 +21,7 @@
     "firebase": "^9.6.3",
     "firebaseui-ja": "^1.0.0",
     "framer-motion": "4.1.17",
-    "graphql": "16.2.0",
+    "graphql": "^16.3.0",
     "next": "12.0.7",
     "next-pwa": "^5.4.4",
     "nookies": "^2.5.2",
@@ -30,6 +31,7 @@
     "react-firebaseui-localized": "^1.2.1"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.5.0",
     "@testing-library/react": "12.1.2",
     "@types/jest": "^27.0.3",
     "@types/node": "17.0.4",
@@ -41,6 +43,10 @@
     "prettier": "2.5.1",
     "ts-jest": "27.1.2",
     "typescript": "4.5.4",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.8.0",
+    "@graphql-codegen/typescript": "2.4.3",
+    "@graphql-codegen/typescript-react-apollo": "3.2.5",
+    "@graphql-codegen/typescript-operations": "2.2.4",
+    "@graphql-codegen/introspection": "2.1.1"
   }
 }
