--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "next lint",
     "test": "jest",
     "format": "prettier --write \"./src/**/*.{ts,tsx}\"",
-    "generate": "graphql-codegen --config codegen.yml"
+    "generate": "graphql-codegen --config codegen.yml",
+    "download:local-graphql": "get-graphql-schema http://localhost:3000/graphql > schema.graphql",
+    "download:local-json": "get-graphql-schema  http://localhost:3000/graphql > schema.json -j"
   },
   "dependencies": {
     "@apollo/client": "^3.5.6",
