--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "4.1.17",
     "graphql": "^16.3.0",
     "next": "12.0.7",
+    "next-http-proxy-middleware": "^1.2.1",
     "next-pwa": "^5.4.4",
     "nookies": "^2.5.2",
     "react": "17.0.2",
@@ -34,6 +35,10 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.5.0",
+    "@graphql-codegen/introspection": "2.1.1",
+    "@graphql-codegen/typescript": "2.4.3",
+    "@graphql-codegen/typescript-operations": "2.2.4",
+    "@graphql-codegen/typescript-react-apollo": "3.2.5",
     "@testing-library/react": "12.1.2",
     "@types/jest": "^27.0.3",
     "@types/node": "17.0.4",
@@ -45,10 +50,6 @@
     "prettier": "2.5.1",
     "ts-jest": "27.1.2",
     "typescript": "4.5.4",
-    "webpack-merge": "^5.8.0",
-    "@graphql-codegen/typescript": "2.4.3",
-    "@graphql-codegen/typescript-react-apollo": "3.2.5",
-    "@graphql-codegen/typescript-operations": "2.2.4",
-    "@graphql-codegen/introspection": "2.1.1"
+    "webpack-merge": "^5.8.0"
   }
 }
