--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-dom": "17.0.2",
     "react-firebaseui": "^6.0.0",
     "react-firebaseui-localized": "^1.2.1",
-    "react-hook-form": "^7.27.0"
+    "react-hook-form": "^7.27.0",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.5.0",
