--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,24 +3,24 @@ name: Main
 on: pull_request
 
 jobs:
-  format:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 16.x
-      - uses: actions/cache@v2
-        with:
-          path: ~/.cache/yarn
-          key: ${{ runner.os }}-yarn-${{ hashFiles(format('{0}{1}', github.workspace, '/yarn.lock')) }}
-          restore-keys: ${{ runner.os }}-yarn-
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile --prefer-offline
-      - name: Run format
-        run: yarn format
-      - name: Check diff
-        run: git diff --exit-code
+  # format:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: actions/setup-node@v2
+  #       with:
+  #         node-version: 16.x
+  #     - uses: actions/cache@v2
+  #       with:
+  #         path: ~/.cache/yarn
+  #         key: ${{ runner.os }}-yarn-${{ hashFiles(format('{0}{1}', github.workspace, '/yarn.lock')) }}
+  #         restore-keys: ${{ runner.os }}-yarn-
+  #     - name: Install dependencies
+  #       run: yarn install --frozen-lockfile --prefer-offline
+  #     - name: Run format
+  #       run: yarn format
+  #     - name: Check diff
+  #       run: git diff --exit-code
 
   # test:
   #   runs-on: ubuntu-latest
